[gd_scene load_steps=8 format=3 uid="uid://62u43pfww8ss"]

[ext_resource type="Script" path="res://main_screen.gd" id="1_t8csx"]
[ext_resource type="FontFile" uid="uid://bpvrun13vwnd6" path="res://assets/fonts/ka1.ttf" id="2_5870g"]
[ext_resource type="FontFile" uid="uid://b00hmw75o067q" path="res://assets/fonts/joystix monospace.otf" id="3_va6ma"]
[ext_resource type="AudioStream" uid="uid://b0ju05fxhx6a7" path="res://assets/music/main_title.mp3" id="5_jberq"]
[ext_resource type="AudioStream" uid="uid://6ndxrxo8npfm" path="res://assets/sounds/button_click.mp3" id="6_nnxw0"]

[sub_resource type="Animation" id="Animation_ux7r3"]
resource_name = "outro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kyox"]
_data = {
"outro": SubResource("Animation_ux7r3")
}

[node name="MarginContainer" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8csx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.968627, 0.937255, 0.92549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5870g")
theme_override_font_sizes/font_size = 22
text = "REGULAR CAT"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5870g")
text = "SAVES THE WORLD"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_va6ma")
theme_override_font_sizes/font_size = 8
text = "or not?"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_va6ma")
theme_override_font_sizes/font_size = 12
text = "START"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_va6ma")
theme_override_font_sizes/font_size = 12
text = "EXIT"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_va6ma")
theme_override_font_sizes/font_size = 7
text = "demo"
horizontal_alignment = 1

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jberq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7kyox")
}

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
color = Color(0.968627, 0.937255, 0.92549, 1)

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nnxw0")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="start_game"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="exit_game"]
